--- a/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
@@ -746,12 +746,6 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr550"
-            id="parquet-hadoop-bundle-1.8.1.jar"
-            name="parquet-hadoop-bundle-1.8.1.jar"
-            mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.8.1/6.0.0"/>
-
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.emr550"
             id="parquet-hadoop-bundle-1.6.0.jar"
             name="parquet-hadoop-bundle-1.6.0.jar"
             mvn_uri="mvn:org.talend.libraries/parquet-hadoop-bundle-1.6.0/6.0.0"/>
@@ -1560,10 +1554,10 @@
              <library id="gson-2.2.4.jar"/>
              <library id="httpcore-4.3.2.jar"/>
              <library id="httpclient-4.3.4.jar"/>
-             <library id="guava-11.0.2.jar"/>
+             <library id="guava-14.0.1.jar"/>
              <library id="protobuf-java-2.5.0.jar"/>
-             <library id="slf4j-api-1.7.10.jar"/>
-             <library id="slf4j-log4j12-1.7.10.jar"/>
+             <library id="slf4j-api-1.7.16.jar"/>
+             <library id="slf4j-log4j12-1.7.16.jar"/>
              <library id="log4j-1.2.17.jar"/>
              <library id="jersey-core-1.9.jar"/>
              <library id="jetty-util-6.1.26-emr.jar"/>
@@ -1598,39 +1592,19 @@
                 description="The latest Map Reduce libraries of EMR 5.5.0"
                 id="MAPREDUCE-LIB-EMR_5_5_0_LATEST"
                 name="MAPREDUCE-LIB-EMR_5_5_0_LATEST">
-             <library id="hadoop-common-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-hdfs-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-auth-2.7.3-amzn-2.jar"/>
              <library id="hadoop-mapreduce-client-common-2.7.3-amzn-2.jar"/>
              <library id="hadoop-mapreduce-client-core-2.7.3-amzn-2.jar"/>
              <library id="hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar"/>
              <library id="hadoop-yarn-api-2.7.3-amzn-2.jar"/>
              <library id="hadoop-yarn-client-2.7.3-amzn-2.jar"/>
              <library id="hadoop-yarn-common-2.7.3-amzn-2.jar"/>
-             <library id="avro-1.7.4.jar"/>
-             <library id="commons-configuration-1.6.jar"/>
-             <library id="commons-lang-2.6.jar"/>
-             <library id="commons-logging-1.1.3.jar"/>
-             <library id="commons-cli-1.2.jar"/>
              <library id="commons-codec-1.4.jar"/>
-             <library id="commons-collections-3.2.2.jar"/>
              <library id="gson-2.2.4.jar"/>
-             <library id="httpcore-4.3.2.jar"/>
-             <library id="httpclient-4.3.4.jar"/>
-             <library id="guava-11.0.2.jar"/>
-             <library id="protobuf-java-2.5.0.jar"/>
-             <library id="slf4j-api-1.7.10.jar"/>
-             <library id="slf4j-log4j12-1.7.10.jar"/>
-             <library id="jackson-mapper-asl-1.9.13.jar"/>
-             <library id="jackson-core-asl-1.9.13.jar"/>
+             <library id="antlr-runtime-3.4.jar"/>
              <library id="jackson-jaxrs-1.9.13.jar"/>
              <library id="jackson-xc-1.9.13.jar"/>
              <library id="jersey-client-1.9.jar"/>
-             <library id="jersey-core-1.9.jar"/>
-             <library id="log4j-1.2.17.jar"/>
-             <library id="jetty-util-6.1.26-emr.jar"/>
              <library id="emr-metrics-client-2.1.0.jar"/>
-             <library id="htrace-core-3.1.0-incubating.jar"/>
         </libraryNeededGroup>
 
         <!-- Map/Reduce parquet group MRREQUIRED -->
@@ -1638,8 +1612,8 @@
                 description="Map/Reduce parquet libraries for EMR 5.5.0 that are MRREQUIRED"
                 id="MAPREDUCE-PARQUET-LIB-MRREQUIRED-EMR_5_5_0"
                 name="MAPREDUCE-PARQUET-LIB-MRREQUIRED-EMR_5_5_0">
-             <library id="parquet-hadoop-bundle-1.8.1.jar" />
-             <library id="snappy-java-1.0.5.jar" />
+             <library id="parquet-hadoop-bundle-1.6.0.jar" />
+             <library id="snappy-java-1.1.2.6.jar" />
              <library id="jodd-core-3.5.2.jar" />
         </libraryNeededGroup>
 
@@ -1650,46 +1624,9 @@
                 name="PIG-LIB-EMR_5_5_0_LATEST">
              <library id="pig-0.16.0-amzn-0-core-h2.jar"/>
              <library id="hadoop-lzo-0.4.19.jar"/>
-             <library id="hadoop-common-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-hdfs-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-auth-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-mapreduce-client-common-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-mapreduce-client-core-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-yarn-api-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-yarn-client-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-yarn-common-2.7.3-amzn-2.jar"/>
-             <library id="avro-1.7.5.jar"/>
-             <library id="commons-configuration-1.6.jar"/>
-             <library id="commons-lang-2.6.jar"/>
-             <library id="commons-logging-1.1.3.jar"/>
-             <library id="commons-cli-1.2.jar"/>
-             <library id="commons-codec-1.4.jar"/>
-             <library id="commons-collections-3.2.2.jar"/>
-             <library id="commons-io-2.4.jar"/>
-             <library id="protobuf-java-2.5.0.jar"/>
-             <library id="slf4j-api-1.7.10.jar"/>
-             <library id="slf4j-log4j12-1.7.10.jar"/>
-             <library id="jackson-mapper-asl-1.9.13.jar"/>
-             <library id="jackson-core-asl-1.9.13.jar"/>
-             <library id="jackson-jaxrs-1.9.13.jar"/>
-             <library id="jackson-xc-1.9.13.jar"/>
-             <library id="jersey-client-1.9.jar"/>
-             <library id="jersey-core-1.9.jar"/>
-             <library id="log4j-1.2.17.jar"/>
-             <library id="gson-2.2.4.jar"/>
-             <library id="httpcore-4.3.2.jar"/>
-             <library id="httpclient-4.3.4.jar"/>
-             <library id="jetty-util-6.1.26-emr.jar"/>
-             <library id="emr-metrics-client-2.1.0.jar"/>
-             <library id="htrace-core-3.1.0-incubating.jar"/>
-             <library id="guava-11.0.2.jar"/>
              <library id="jline-1.0.jar"/>
-             <library id="antlr-runtime-3.4.jar"/>
              <library id="joda-time-2.9.3.jar"/>
              <library id="automaton-1.11-8.jar"/>
-             <library id="servlet-api-2.5.jar"/>
-             <library id="commons-io-2.4.jar"/>
         </libraryNeededGroup>
 
         <!-- Pig Parquet group -->
@@ -1774,7 +1711,7 @@
              <library id="commons-collections-3.2.2.jar" />
              <library id="zookeeper-3.4.8.jar" />
              <library id="htrace-core-3.1.0-incubating.jar" />
-             <library id="guava-12.0.1.jar" />
+             <library id="guava-14.0.1.jar" />
              <library id="jackson-mapper-asl-1.9.13.jar" />
              <library id="jackson-core-asl-1.9.13.jar" />
              <library id="netty-all-4.0.23.Final.jar" />
@@ -1800,32 +1737,8 @@
 		     <library id="jdo-api-3.0.1.jar"/>
              <library id="libthrift-0.9.3.jar"/>
              <library id="libfb303-0.9.3.jar"/>
-             <library id="guava-14.0.1.jar"/>
-             <library id="hadoop-common-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-hdfs-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-auth-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-mapreduce-client-common-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-mapreduce-client-core-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-yarn-api-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-yarn-client-2.7.3-amzn-2.jar"/>
-             <library id="hadoop-yarn-common-2.7.3-amzn-2.jar"/>
-             <library id="avro-1.7.7.jar"/>
-             <library id="commons-configuration-1.6.jar"/>
              <library id="commons-httpclient-3.0.1.jar"/>
-             <library id="gson-2.2.4.jar"/>
-             <library id="httpcore-4.3.2.jar"/>
-             <library id="httpclient-4.3.4.jar"/>
              <library id="commons-lang3-3.5.jar"/>
-             <library id="commons-logging-1.2.jar"/>
-             <library id="commons-cli-1.2.jar"/>
-             <library id="commons-codec-1.4.jar"/>
-             <library id="commons-collections-3.2.2.jar"/>
-             <library id="slf4j-api-1.7.10.jar"/>
-             <library id="slf4j-log4j12-1.7.10.jar"/>
-             <library id="log4j-1.2.17.jar"/>
-             <library id="commons-io-2.4.jar"/>
-             <library id="antlr-runtime-3.4.jar"/>
              <library id="datanucleus-api-jdo-4.2.1.jar"/>
              <library id="datanucleus-core-4.1.6.jar"/>
              <library id="datanucleus-rdbms-4.1.7.jar"/>
@@ -1833,7 +1746,6 @@
              <library id="zookeeper-3.4.8.jar"/>
              <library id="curator-framework-2.6.0.jar"/>
              <library id="curator-client-2.6.0.jar"/>
-             <library id="htrace-core-3.1.0-incubating.jar"/>
         </libraryNeededGroup>
 
         <!-- Hive HBase group-->
@@ -1897,7 +1809,7 @@
 			<library id="commons-beanutils-1.7.0.jar"/>
 			<library id="commons-beanutils-core-1.8.0.jar"/>
 			<library id="commons-cli-1.2.jar"/>
-			<library id="commons-codec-1.10.jar"/> <!-- TBR with 1.4 -->
+			<library id="commons-codec-1.4.jar"/>
 			<library id="commons-collections-3.2.2.jar"/>
 			<library id="commons-compiler-3.0.0.jar"/>
 			<library id="commons-compress-1.4.1.jar"/>
@@ -1914,9 +1826,9 @@
 			<library id="commons-pool-1.5.4.jar"/>
 			<library id="compress-lzf-1.0.3.jar"/>
 			<library id="core-1.1.2.jar"/>
-			<library id="curator-client-2.6.0.jar"/> <!-- TBR 2.7.1 -->
-			<library id="curator-framework-2.6.0.jar"/> <!-- TBR 2.7.1 -->
-			<library id="curator-recipes-2.6.0.jar"/> <!-- TBR 2.7.1 -->
+			<library id="curator-client-2.6.0.jar"/>
+			<library id="curator-framework-2.6.0.jar"/>
+			<library id="curator-recipes-2.6.0.jar"/>
 			<library id="datanucleus-api-jdo-3.2.6.jar"/>
 			<library id="datanucleus-core-3.2.10.jar"/>
 			<library id="datanucleus-rdbms-3.2.9.jar"/>
@@ -1950,17 +1862,15 @@
 			<library id="hk2-locator-2.4.0-b34.jar"/>
 			<library id="hk2-utils-2.4.0-b34.jar"/>
 			<library id="htrace-core-3.1.0-incubating.jar"/>
-    		<library id="httpclient-4.5.2.jar"/>
-			<library id="httpcore-4.4.4.jar"/>
+            <library id="httpcore-4.3.2.jar"/>
+            <library id="httpclient-4.3.4.jar"/>
 			<library id="ivy-2.4.0.jar"/>
 			<library id="jackson-annotations-2.6.5.jar"/>
 			<library id="jackson-core-2.6.5.jar"/>
-			<library id="jackson-core-asl-2.6.5.jar"/>
+			<library id="jackson-core-asl-1.9.13.jar"/>
 			<library id="jackson-jaxrs-1.9.13.jar"/>
-			<library id="jackson-jaxrs-2.6.5.jar"/>
-			<library id="jackson-mapper-asl-2.6.5.jar"/>
+			<library id="jackson-mapper-asl-1.9.13.jar"/>
 			<library id="jackson-xc-1.9.13.jar"/>
-         	<library id="jackson-xc-2.6.5.jar"/>
 			<library id="jackson-databind-2.6.5.jar"/>
 			<library id="jackson-module-paranamer-2.6.5.jar"/>
 			<library id="jackson-module-scala_2.11-2.6.5.jar"/>
@@ -1977,10 +1887,8 @@
 			<library id="jaxb-api-2.2.2.jar"/>
 			<library id="jcl-over-slf4j-1.7.16.jar"/>
 			<library id="jdo-api-3.0.1.jar"/>
-			<library id="jersey-client-1.9.jar"/>
 			<library id="jersey-client-2.22.2.jar"/>
 			<library id="jersey-common-2.22.2.jar"/>
-			<library id="jersey-core-1.9.jar"/>
 			<library id="jersey-container-servlet-2.22.2.jar"/>
 			<library id="jersey-container-servlet-core-2.22.2.jar"/>
 			<library id="jersey-guava-2.22.2.jar"/>
@@ -2073,14 +1981,6 @@
 			<library id="xmlenc-0.52.jar"/>
 			<library id="xz-1.0.jar"/>
 			<library id="zookeeper-3.4.6.jar"/>
-			<library id="tez-api-0.8.4.jar"/>
-       		<library id="tez-common-0.8.4.jar"/>
-        	<library id="tez-dag-0.8.4.jar"/>
-			<library id="tez-mapreduce-0.8.4.jar"/>
-        	<library id="tez-runtime-internals-0.8.4.jar"/>
-            <library id="tez-runtime-library-0.8.4.jar"/>
-            <library id="tez-yarn-timeline-history-0.8.4.jar"/>
-            <library id="tez-yarn-timeline-history-with-acls-0.8.4.jar"/>
 		  </libraryNeededGroup>
 
         <!-- Spark group MRREQUIRED -->
@@ -2181,7 +2081,7 @@
             <library id="kite-hadoop-compatibility-1.0.0.jar"/>
             <library id="jackson-databind-2.3.1.jar"/>
             <library id="jackson-core-2.3.1.jar"/>
-            <library id="parquet-hadoop-bundle-1.8.1.jar" />
+            <library id="parquet-hadoop-bundle-1.6.0.jar" />
             <library id="parquet-avro-1.4.1.jar"/>
         </libraryNeededGroup>
 
@@ -2196,7 +2096,7 @@
       </classloader>
       <classloader
             index="MAP_REDUCE:AMAZON_EMR:EMR_5_5_0"
-            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;hadoop-mapreduce-client-common-2.7.3-amzn-2.jar;hadoop-mapreduce-client-core-2.7.3-amzn-2.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar;hadoop-yarn-api-2.7.3-amzn-2.jar;hadoop-yarn-client-2.7.3-amzn-2.jar;hadoop-yarn-common-2.7.3-amzn-2.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-client-1.9.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;jodd-core-3.5.2.jar;log4j-1.2.17.jar;parquet-hadoop-bundle-1.8.1.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;snappy-java-1.0.5.jar">
+            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;hadoop-mapreduce-client-common-2.7.3-amzn-2.jar;hadoop-mapreduce-client-core-2.7.3-amzn-2.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar;hadoop-yarn-api-2.7.3-amzn-2.jar;hadoop-yarn-client-2.7.3-amzn-2.jar;hadoop-yarn-common-2.7.3-amzn-2.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.13.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;jackson-xc-1.9.13.jar;jersey-client-1.9.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;jodd-core-3.5.2.jar;log4j-1.2.17.jar;parquet-hadoop-bundle-1.6.0.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;snappy-java-1.1.2.6.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:EMR_5_5_0"
