--- a/main/plugins/org.talend.hadoop.distribution.altus10/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.altus10/plugin.xml
@@ -3,9 +3,242 @@
 <plugin>
    <extension
          point="org.talend.core.runtime.librariesNeeded">
+        <!-- HDFS common group -->
+        <libraryNeededGroup
+                description="HDFS libraries for CDH 5.10"
+                id="HDFS-LIB-ALTUS10"
+                name="HDFS-LIB-ALTUS10" >
+             <library id="hadoop-common-cdh5.10" />
+             <library id="hadoop-hdfs-cdh5.10" />
+             <library id="hadoop-auth-cdh5.10" />
+             <library id="commons-configuration-1.6.jar" />
+             <library id="commons-lang-2.6.jar" />
+             <library id="commons-cli-1.2.jar" />
+             <library id="commons-collections-3.2.2.jar" />
+             <library id="avro-1.7.6-cdh5.10.1" />
+             <library id="protobuf-java-2.5.0.jar" />
+             <library id="slf4j-api-1.7.5.jar" />
+             <library id="slf4j-log4j12-1.7.5.jar" />
+             <library id="log4j-1.2.17.jar" />
+             <library id="jersey-core-1.9.jar" />
+             <library id="htrace-core4-4.0.1-incubating.jar" />
+             <library id="servlet-api-2.5.jar"/>
+             <library id="jackson-mapper-asl-1.8.8.jar" />
+             <library id="jackson-core-asl-1.8.8.jar" />
+        </libraryNeededGroup>
+        
+        <!-- HDFS Spark 1.6 group -->
+        <libraryNeededGroup
+                description="HDFS libraries for CDH 5.10"
+                id="SPARK-LIB-ALTUS10"
+                name="SPARK-LIB-ALTUS10" >
+        	<library id="httpclient-4.5.2.jar"/>
+            <library id="httpcore-4.4.4.jar"/>
+            <library id="guava-14.0.1.jar" />
+            <library id="commons-codec-1.10.jar" /> <!-- This jar is required for HDFS SSL connection-->
+            <library id="commons-logging-1.1.3.jar" />
+        
+            <library id="akka-actor.jar"/>
+            <library id="activation-1.1.1.jar"/>
+            <library id="antlr-2.7.7.jar"/>
+            <library id="antlr4-runtime-4.5.3.jar"/>              
+            <library id="antlr-runtime-3.4.jar"/>
+            <library id="aopalliance-1.0.jar"/>
+            <library id="aopalliance-repackaged-2.4.0-b34.jar"/>
+            <library id="apache-log4j-extras-1.2.17.jar"/>
+            <library id="arpack_combined_all-0.1.jar"/>
+            <library id="avro-1.7.6-cdh5.8.1.jar"/>
+            <library id="avro-ipc-1.7.6-cdh5.8.1.jar"/>
+            <library id="avro-mapred-1.7.6-cdh5.8.1.jar"/>
+            <library id="blas-0.8.jar"/>             
+            <library id="bonecp-0.7.1.jar"/>
+            <library id="breeze_2.11-0.11.2.jar"/>
+            <library id="breeze-macros_2.11-0.11.2.jar"/>
+            <library id="calcite-avatica-1.2.0-incubating.jar"/>
+            <library id="calcite-core-1.2.0-incubating.jar"/>
+            <library id="calcite-linq4j-1.2.0-incubating.jar"/>
+            <library id="chill_2.11-0.8.0.jar"/>
+            <library id="chill-java-0.8.0.jar"/>
+            <library id="commons-beanutils-1.9.2.jar"/>
+            <library id="commons-beanutils-core-1.8.0.jar"/>
+            <library id="commons-cli-1.2.jar"/>
+            <library id="commons-codec-1.10.jar"/>
+            <library id="commons-collections-3.2.2.jar"/>
+            <library id="commons-compiler-3.0.0.jar"/>
+            <library id="commons-compress-1.4.1.jar"/>
+            <library id="commons-configuration-1.6.jar"/>
+            <library id="commons-crypto-1.0.0.jar"/>
+            <library id="commons-dbcp-1.4.jar"/>
+            <library id="commons-httpclient-3.1.jar"/>
+            <library id="commons-io-2.4.jar"/>
+            <library id="commons-lang-2.6.jar"/>
+            <library id="commons-lang3-3.5.jar"/>
+            <library id="commons-logging-1.1.3.jar "/>
+            <library id="commons-math3-3.4.1.jar"/>
+            <library id="commons-net-2.2.jar"/>
+            <library id="commons-pool-1.5.4.jar"/>
+            <library id="compress-lzf-1.0.3.jar"/>
+            <library id="core-1.1.2.jar"/>
+            <library id="datanucleus-api-jdo-3.2.6.jar"/>
+            <library id="datanucleus-core-3.2.10.jar"/>
+            <library id="datanucleus-rdbms-3.2.9.jar"/>
+            <library id="derby-10.11.1.1.jar"/>
+            <library id="eigenbase-properties-1.1.5.jar"/>
+            <library id="fastutil-6.3.jar"/>
+            <library id="findbugs-annotations-1.3.9-1.jar"/>
+            <library id="gson-2.2.4.jar"/>
+            <library id="hbase-annotations-1.2.0-cdh5.10.1.jar"/>
+            <library id="hbase-common-1.2.0-cdh5.10.1.jar"/>
+            <library id="hbase-protocol-1.2.0-cdh5.10.1.jar"/>
+            <library id="hive-metastore-1.1.0-cdh5.10.1.jar"/>
+            <library id="hive-serde-1.1.0-cdh5.10.1.jar"/>
+            <library id="hive-shims-0.23-1.1.0-cdh5.10.1.jar"/>
+            <library id="hive-shims-1.1.0-cdh5.10.1.jar"/>
+            <library id="hive-shims-common-1.1.0-cdh5.10.1.jar"/>
+            <library id="hive-shims-scheduler-1.1.0-cdh5.10.1.jar"/>
+            <library id="hk2-api-2.4.0-b34.jar"/>
+            <library id="hk2-locator-2.4.0-b34.jar"/>
+            <library id="hk2-utils-2.4.0-b34.jar"/>
+            <library id="htrace-core-3.0.4.jar"/>
+            <library id="htrace-core4-4.0.1-incubating.jar"/>
+            <library id="httpcore-4.4.4.jar"/>
+            <library id="ivy-2.4.0.jar"/>
+            <library id="jackson-annotations-2.6.5.jar"/>
+            <library id="jackson-core-2.6.5.jar"/>
+            <library id="jackson-core-asl-1.8.8.jar"/>
+            <library id="jackson-databind-2.6.5.jar"/>
+            <library id="jackson-jaxrs-1.8.8.jar"/>
+            <library id="jackson-mapper-asl-1.8.8.jar"/>
+            <library id="jackson-module-paranamer-2.6.5.jar"/>
+            <library id="jackson-module-scala_2.11-2.6.5.jar"/>
+            <library id="jackson-xc-1.8.8.jar"/>
+            <library id="janino-3.0.0.jar"/>
+            <library id="javassist-3.18.1-GA.jar"/>
+            <library id="javax.annotation-api-1.2.jar"/>
+            <library id="javax.inject-2.4.0-b34.jar"/>
+            <library id="javax.servlet-api-3.1.0.jar"/>
+            <library id="javax.ws.rs-api-2.0.1.jar"/>
+            <library id="java-xmlbuilder-1.0.jar"/>
+            <library id="javolution-5.5.1.jar"/>
+            <library id="jaxb-api-2.2.2.jar"/>
+            <library id="jaxb-impl-2.2.3-1.jar"/>
+            <library id="jcl-over-slf4j-1.7.5.jar"/>
+            <library id="jdo-api-3.0.1.jar"/>
+            <library id="jersey-client-2.22.2.jar"/>
+            <library id="jersey-common-2.22.2.jar"/>
+            <library id="jersey-container-servlet-2.22.2.jar"/>
+            <library id="jersey-container-servlet-core-2.22.2.jar"/>
+            <library id="jersey-guava-2.22.2.jar"/>
+            <library id="jersey-media-jaxb-2.22.2.jar"/>
+            <library id="jersey-server-2.22.2.jar"/>
+            <library id="jetty-6.1.26.cloudera.2.jar"/>
+            <library id="jetty-util-6.1.26.cloudera.2.jar"/>
+            <library id="jline-2.12.jar"/>
+            <library id="joda-time-2.9.3.jar"/>
+            <library id="jodd-core-3.5.2.jar"/>
+            <library id="json4s-ast_2.11-3.2.11.jar"/>
+            <library id="json4s-core_2.11-3.2.11.jar"/>
+            <library id="json4s-jackson_2.11-3.2.11.jar"/>
+            <library id="jta-1.1.jar"/>
+            <library id="jtransforms-2.4.0.jar"/>
+            <library id="jul-to-slf4j-1.7.16.jar"/>
+            <library id="kryo-shaded-3.0.3.jar"/>
+            <library id="libfb303-0.9.2.jar"/>
+            <library id="libthrift-0.9.2.jar"/>
+            <library id="logredactor-1.0.3.jar"/>
+            <library id="lz4-1.3.0.jar"/>
+            <library id="mesos-0.21.1-shaded-protobuf.jar"/>
+            <library id="metrics-core-2.2.0.jar"/>
+            <library id="metrics-core-3.1.2.jar"/>
+            <library id="metrics-graphite-3.1.2.jar"/>
+            <library id="metrics-json-3.1.2.jar"/>
+            <library id="metrics-jvm-3.1.2.jar"/>
+            <library id="mina-core-2.0.0-M5.jar"/>
+            <library id="minlog-1.3.0.jar"/>
+            <library id="mtj-0.9.9.jar"/>
+            <library id="netty-3.10.5.Final.jar"/>
+            <library id="netty-all-4.0.29.Final.jar"/>
+            <library id="objenesis-2.1.jar"/>
+            <library id="opencsv-2.3.jar"/>
+            <library id="oro-2.0.8.jar"/>
+            <library id="osgi-resource-locator-1.0.1.jar"/>
+            <library id="paranamer-2.3.jar"/>
+            <library id="parquet-avro-1.5.0-cdh5.10.1.jar"/>
+            <library id="parquet-column-1.5.0-cdh5.10.1.jar"/>
+            <library id="parquet-common-1.5.0-cdh5.10.1.jar"/>
+            <library id="parquet-encoding-1.5.0-cdh5.10.1.jar"/>
+            <library id="parquet-format-2.1.0-cdh5.10.1.jar"/>
+            <library id="parquet-hadoop-1.5.0-cdh5.10.1.jar"/>
+            <library id="parquet-hadoop-bundle-1.5.0-cdh5.10.1.jar"/>
+            <library id="parquet-jackson-1.5.0-cdh5.10.1.jar"/>
+            <library id="pmml-model-1.2.15.jar"/>
+            <library id="pmml-schema-1.2.15.jar"/>
+            <library id="py4j-0.10.4.jar"/>
+            <library id="pyrolite-4.13.jar"/>
+            <library id="RoaringBitmap-0.5.11.jar"/>
+            <library id="scala-compiler-2.11.8.jar"/>
+            <library id="scala-library-2.11.8.jar"/>
+            <library id="scalap-2.11.8.jar"/>
+            <library id="scala-parser-combinators_2.11-1.0.4.jar"/>
+            <library id="scala-reflect-2.11.8.jar"/>
+            <library id="scala-xml_2.11-1.0.2.jar"/>
+            <library id="spark-catalyst_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-core_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-graphx_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-hive_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-hive-exec_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-launcher_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-mllib_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-mllib-local_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-network-common_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-network-shuffle_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-repl_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-sketch_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-sql_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-streaming_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-tags_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-unsafe_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spark-yarn_2.11-2.1.0.cloudera1.jar"/>
+            <library id="spire_2.11-0.7.4.jar"/>
+            <library id="spire-macros_2.11-0.7.4.jar"/>
+            <library id="ST4-4.0.4.jar"/>
+            <library id="stax-api-1.0.2.jar"/>
+            <library id="stream-2.7.0.jar"/>
+            <library id="stringtemplate-3.2.1.jar"/>
+            <library id="typesafe-config-2.10.1.jar"/>
+            <library id="univocity-parsers-2.1.1.jar"/>
+            <library id="validation-api-1.1.0.Final.jar"/>
+            <library id="xbean-asm5-shaded-4.4.jar"/>
+            <library id="xz-1.0.jar"/>
+        	<library id="zkclient-0.7.jar"/>
+        </libraryNeededGroup>
+
+        <!-- Map/Reduce group -->
+        <libraryNeededGroup
+                description="Map/Reduce libraries for CDH 5.10"
+                id="MAPREDUCE-LIB-ALTUS10"
+                name="MAPREDUCE-LIB-ALTUS10"  >
+             <library id="hadoop-mapreduce-client-common-cdh5.10"/>
+             <library id="hadoop-mapreduce-client-core-cdh5.10"/>
+             <library id="hadoop-mapreduce-client-jobclient-cdh5.10"/>
+             <library id="hadoop-yarn-api-cdh5.10"/>
+             <library id="hadoop-yarn-client-cdh5.10"/>
+             <library id="hadoop-yarn-common-cdh5.10"/>                          
+             <library id="hadoop-yarn-server-web-proxy-cdh5.10"/>                          
+             <library id="commons-io-2.4.jar"/>
+             <library id="commons-codec-1.9.jar" />
+             <library id="commons-httpclient-3.0.1.jar"/>
+             <library id="htrace-core-3.2.0-incubating.jar" />
+             <library id="jackson-mapper-asl-1.8.8.jar" />
+             <library id="jackson-core-asl-1.8.8.jar" />
+             <library id="jackson-jaxrs-1.8.8.jar"/>
+             <library id="jackson-xc-1.8.8.jar"/>
+             <library id="jersey-client-1.9.jar"/>
+        </libraryNeededGroup>
+        
    </extension>
    <extension
-         point="org.talend.core.runtime.classloader_provider">
+         point="org.talend.core.runtime.classloader_provider">        
    </extension>
 
 </plugin>
