--- a/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
@@ -552,8 +552,8 @@
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
             id="spark-streaming-kinesis-asl_2.11"
-            name="spark-streaming-kinesis-asl_2.11.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl_2.11/6.0.0"/>    
+            name="spark-streaming-kinesis-asl_2.11-2.0.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl_2.11-2.0.0/6.0.0"/>    
             
         <libraryNeeded 
             context="plugin:org.talend.hadoop.distribution.emr500"
