--- a/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
@@ -551,7 +551,7 @@
             
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
-            id="spark-streaming-kinesis-asl_2.11"
+            id="spark-streaming-kinesis-asl_2.11-emr500-latest"
             name="spark-streaming-kinesis-asl_2.11-2.0.0.jar"
             mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl_2.11-2.0.0/6.0.0"/>    
             
@@ -1226,7 +1226,7 @@
                 id="SPARK-KINESIS-LIB-MRREQUIRED-EMR_5_0_0_LATEST"
                 name="SPARK-KINESIS-LIB-MRREQUIRED-EMR_5_0_0_LATEST">
             <!--<library id="spark-streaming-kinesis-asl-assembly-emr500-latest"/> -->
-            <library id="spark-streaming-kinesis-asl_2.11"/>
+            <library id="spark-streaming-kinesis-asl_2.11-emr500-latest"/>
             <library id="amazon-kinesis-client-1.2.1.jar"/>
             <library id="aws-java-sdk-kinesis-emr500-latest"/>
             <library id="aws-java-sdk-core-emr500-latest"/>            
