--- a/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp260/plugin.xml
@@ -1265,6 +1265,7 @@
             <library id="commons-httpclient-3.1.jar" />
             <library id="commons-io-2.4.jar" />
             <library id="commons-lang-2.6.jar" />
+            <library id="commons-lang3-3.5.jar" />
             <library id="commons-logging-1.1.3.jar" />
             <library id="commons-math3-3.4.1.jar" />
             <library id="commons-net-2.2.jar" />
