--- a/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh5100/plugin.xml
@@ -1521,9 +1521,9 @@
              <library id="navigator-sdk-model-2.0-20160624" />
              <library id="spring-core-4.0.7.RELEASE"/>
              <library id="spring-web-4.0.7.RELEASE"/>
-             <!--library id="jackson-databind-2.2.3.jar"/-->
-             <!--library id="jackson-annotations-2.3.1"/-->
-             <!--library id="jackson-core-2.2.3.jar"/-->
+             <library id="jackson-databind-2.2.3.jar"/>
+             <library id="jackson-annotations-2.3.1"/>
+             <library id="jackson-core-2.2.3.jar"/>
              <library id="commons-net-3.1"/>
              <library id="jackson-datatype-joda-2.1.0"/>
              <library id="joda-time-2.5.jar"/>
